--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="Build/Windows/Barbarian.exe"
+export_path="build/windows/Barbarian.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -32,16 +32,16 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PackedStringArray()
 application/modify_resources=true
-application/icon=""
-application/console_wrapper_icon=""
+application/icon="res://reflexes log.svg"
+application/console_wrapper_icon="res://reflexes log.svg"
 application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
-application/company_name=""
-application/product_name=""
-application/file_description=""
-application/copyright=""
-application/trademarks=""
+application/company_name="Reflexes Studio"
+application/product_name="Barbarian Blaster"
+application/file_description="Made with godot"
+application/copyright="Copyright(c)2024 Reflexes Studio."
+application/trademarks="R"
 application/export_angle=0
 application/export_d3d12=0
 application/d3d12_agility_sdk_multiarch=true
