--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="build/windows/Barbarian.exe"
+export_path="build/Barbarian.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -32,8 +32,8 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PackedStringArray()
 application/modify_resources=true
-application/icon="res://reflexes log.svg"
-application/console_wrapper_icon="res://reflexes log.svg"
+application/icon="res://logo.png"
+application/console_wrapper_icon="res://logo.png"
 application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
